Name: pipes-process
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Process-Library/issues
Synopsis: Shell support for pipes
Description: @pipes-process@ wraps the @process@ library using
    @pipes-concurrency@
    .
    @Pipes.Process@ contains the full documentation for this library.
Category: Pipes, System
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Process-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base              >= 4       && < 5  ,
        bytestring                           ,
        pipes             >= 4.0.0   && < 4.2,
        pipes-bytestring  >= 2.0.0   && < 2.1,
        pipes-concurrency >= 2.0.0   && < 2.1,
        process           >= 1.0.1.1 && < 1.3
    Exposed-Modules: Pipes.Process
    GHC-Options: -O2 -Wall
